--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       </div>
 
       <div class="breaker">
-        <img class="hr" src="./images//pattern-divider-desktop.svg" />
+        <img class="hr" src="./images//pattern-divider-desktop.svg" alt='seperator' />
       </div>
 
       <div class="dice__container">
-        <img class="dice" src="./images/icon-dice.svg" alt="" />
+        <img class="dice" src="./images/icon-dice.svg" alt="diceimage" />
       </div>
     </div>
     <script src="./script.js"></script>
