--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="advicenumber">
-        <p class="advice_no">Advice #<span class="advice_number">117</span></p>
+      <div class="advicenumber" aria-live="polite">
+        <p class="advice_no" >Advice #<span class="advice_number">117</span></p>
       </div>
 
-      <div class="advice">
+      <div class="advice" aria-live="polite">
         "It is easy to sit up and take notice, what's difficult is getting up
         and taking action."
       </div>
 
       <div class="breaker">
-        <img class="hr" src="./images//pattern-divider-desktop.svg" />
+        <img class="hr" src="./images//pattern-divider-desktop.svg" alt="seperator"/>
       </div>
 
       <div class="dice__container">
-        <img class="dice" src="./images/icon-dice.svg" alt="" />
+        <img class="dice" src="./images/icon-dice.svg" alt="diceimage" />
       </div>
     </div>
     <script src="./script.js"></script>
